[package]
name = "incremental_dao"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = "0.5"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix = "0.13"
actix-files = "0.6.6"
actix-web-actors = "4"
lazy_static = "1.5.0"
serde = {version="1.0.203", features=["derive"]}
toml = "0.8.14"
log = "0.4"
env_logger = "0.11"
tera = { version = "1", default-features = false }
